--- a/MP2.Rmd
+++ b/MP2.Rmd
@@ -17,6 +17,7 @@ output:
 # Load all your packages here:
 library(tidyverse)
 library(scales)
+library(gridExtra)
 
 # Set default behavior for all code chunks here:
 knitr::opts_chunk$set(
@@ -71,6 +72,31 @@ test <- test %>% mutate_if(is.character, as.factor)
 
 ```
 
+## Visualizations
+
+A multivariate exploratory visualization of the *relationship* between the outcome and predictor variable.
+
+```{r}
+plot1 <- ggplot(training, aes(x = log10_GrLivArea, y = log10_SalePrice)) +
+  geom_point() +
+  labs(x = "log10(Above ground living area in square feet)", 
+       y = "log10(Sale price in USD)",
+       title = "Relationship of temporary outcome variable and numerical predictor variable")
+```
+
+```{r}
+plot2 <- ggplot(training, aes(x = HouseStyle, y = log10_SalePrice)) +
+  geom_boxplot(fill =  "darkolivegreen1") +
+  labs(x = "Style of Dwelling", 
+       y = "log10(Sale price in USD)",
+       title = "Relationship of temporary outcome variable and categorical predictor variable")
+```
+
+```{r}
+require(gridExtra)
+grid.arrange(plot1, plot2, ncol=2)
+```
+
 
 
 ***
@@ -119,7 +145,7 @@ training <- training %>%
   mutate(fold = rep(1:5, length = n())) %>% 
   arrange(fold)
 
-  RMLSE <- rep(0, 5)
+  #RMLSE <- rep(0, 5)
   for(j in 1:5){
     pretend_training <- training %>% 
       filter(fold != j)
