--- a/MP2.Rmd
+++ b/MP2.Rmd
@@ -58,7 +58,8 @@ sample_submission <- read_csv("data/sample_submission.csv")
 As much as possible, try to do all your data wrangling here:
 
 ```{r}
-training<- training %>%
+# Do a log10 xform on sale price to prevent negative price predictions later on
+training <- training %>%
   mutate(log10_SalePrice = log10(SalePrice),
          log10_GrLivArea = log10(GrLivArea),
          MSSubClass = as.factor(MSSubClass))
@@ -67,14 +68,14 @@ test <- test %>%
   mutate(log10_GrLivArea = log10(GrLivArea),
          MSSubClass = as.factor(MSSubClass))
 
+# Convert all character variables to factors
 training <- training %>% mutate_if(is.character, as.factor)
 test <- test %>% mutate_if(is.character, as.factor)
-
 ```
 
 ## Visualizations
 
-A multivariate exploratory visualization of the *relationship* between the outcome and predictor variable.
+We examined the relationships between the outcome variable and the predictors of each model while determining which variables would be good to use in the model. Though we will not include those visualizations here, it is important to note that we looked at them while determining what best predictor variables might be available for the strongest relationships with our outcome variable.
 
 ```{r}
 plot1 <- ggplot(training, aes(x = log10_GrLivArea, y = log10_SalePrice)) +
@@ -139,43 +140,43 @@ Obtain an estimate $\widehat{RMLSE}$ that closely matches the RMLSE that Kaggle 
 
 ```{r}
 # Calculate RMLSE for MVP model with one numeric and one categorical predictor - 0.2564427
-
 training <- training %>% 
   sample_frac(1) %>% 
   mutate(fold = rep(1:5, length = n())) %>% 
   arrange(fold)
 
-  #RMLSE <- rep(0, 5)
-  for(j in 1:5){
-    pretend_training <- training %>% 
-      filter(fold != j)
-    pretend_test <- training %>% 
-      filter(fold == j)
+RMLSE <- rep(0, 5)
+  
+for(j in 1:5) {
+  pretend_training <- training %>% 
+    filter(fold != j)
+  pretend_test <- training %>% 
+    filter(fold == j)
     
-    # Fit model on pretend training
-    model_1_formula <- as.formula("log10_SalePrice ~ log10_GrLivArea + HouseStyle")
-    model_1 <- lm(model_1_formula, data = pretend_training)
+  # Fit model on pretend training
+  model_1_formula <- as.formula("log10_SalePrice ~ log10_GrLivArea + HouseStyle")
+  model_1 <- lm(model_1_formula, data = pretend_training)
 
-    # Make predictions on pretend test data. 
-    predicted_points_1 <- model_1 %>%
+  # Make predictions on pretend test data. 
+  predicted_points_1 <- model_1 %>%
     broom::augment(newdata = pretend_test)
     
-    # Save predictions in pretend_test data frame
-    pretend_test <- pretend_test %>% 
+  # Save predictions in pretend_test data frame
+  pretend_test <- pretend_test %>% 
     mutate(log10_SalePrice_hat = predicted_points_1$.fitted,
-        SalePrice_hat = 10^log10_SalePrice_hat)
+           SalePrice_hat = 10^log10_SalePrice_hat)
     
-    RMLSE[j] <- pretend_test %>% 
-      mutate(
-        residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
-        residual_sq = residual^2
-      ) %>% 
-      summarize(
-        MLSE = mean(residual_sq),
-        RMLSE = sqrt(MLSE)
-      ) %>% 
-      pull(RMLSE)
-  }
+  RMLSE[j] <- pretend_test %>% 
+    mutate(
+      residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
+      residual_sq = residual^2
+    ) %>% 
+    summarize(
+      MLSE = mean(residual_sq),
+      RMLSE = sqrt(MLSE)
+    ) %>% 
+    pull(RMLSE)
+}
   
 RMLSE_hat <- mean(RMLSE)
 
@@ -183,63 +184,82 @@ RMLSE_hat
 ```
 
 
-The estimated RMLSE from the pretend test data is 0.256 as compared to the actual Kaggle score of 0.253. These are very close!
+The estimated RMLSE from the 5-fold CV is 0.24155 as compared to the actual Kaggle score of 0.253. These are very close!
 
 ***
 
 
 # Reaching for the stars
 
-
 ```{r}
-# REACHING FOR THE STARS
-
-# Fit model with three arbitrarily chosen numerical and three categorical predictors to pretend training data
+# Prediction on all of training data using the reaching for the stars model
+# to submit to Kaggle
 model_2_formula <- as.formula("log10_SalePrice ~ log10_GrLivArea + OverallQual + LotArea +
                               HouseStyle + Neighborhood + SaleCondition")
-model_2 <- lm(model_2_formula, data = pretend_train)
 
-# Make predictions on pretend test data
-predicted_points_2 <- model_2 %>%
-  broom::augment(newdata = pretend_test)
+model_2 <- lm(model_2_formula, data = training)
 
-# Save predictions in pretend_test data frame
-pretend_test <- pretend_test %>% 
-  mutate(log10_SalePrice_hat = predicted_points_2$.fitted,
-        SalePrice_hat = 10^log10_SalePrice_hat)
+predicted_points2 <- model_2 %>%
+  broom::augment(newdata = test)
 
-pretend_test2 <- pretend_test %>% 
-      mutate(residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
-             residual_sq = residual^2) 
+test2 <- test %>%
+  mutate(log10_SalePrice_hat = predicted_points2$.fitted,
+         SalePrice = 10^log10_SalePrice_hat)
+```
 
-# Calculate RMLSE - 0.1734234
-rmlse2 <- pretend_test2 %>% 
-      summarize(
-        MLSE = mean(residual_sq),
-        RMLSE = sqrt(MLSE)
-      ) %>% 
-      pull(RMLSE)
-rmlse2 
+```{r}
+# Use 5-fold CV to confirm that our RMLSE is similar to the one provided by Kaggle
+RMLSE2 <- rep(0, 5)
+  
+for(j in 1:5) {
+  pretend_training <- training %>% 
+    filter(fold != j)
+  pretend_test <- training %>% 
+    filter(fold == j)
+    
+  # Fit model on pretend training
+  model_2_formula <- as.formula("log10_SalePrice ~ log10_GrLivArea + OverallQual + LotArea +
+                              HouseStyle + Neighborhood + SaleCondition")
+  model_2 <- lm(model_2_formula, data = pretend_training)
+
+  # Make predictions on pretend test data
+  predicted_points_2 <- model_2 %>%
+    broom::augment(newdata = pretend_test)
+
+  # Save predictions in pretend_test data frame
+  pretend_test <- pretend_test %>% 
+    mutate(log10_SalePrice_hat = predicted_points_2$.fitted,
+           SalePrice_hat = 10^log10_SalePrice_hat)
+
+  pretend_test2 <- pretend_test %>% 
+    mutate(residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
+           residual_sq = residual^2) 
+
+    
+  RMLSE2[j] <- pretend_test2 %>% 
+    mutate(
+      residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
+      residual_sq = residual^2
+    ) %>% 
+    summarize(
+      MLSE = mean(residual_sq),
+      RMLSE2 = sqrt(MLSE)
+    ) %>% 
+    pull(RMLSE2)
+}
+  
+RMLSE2_hat <- mean(RMLSE2)
+
+RMLSE2_hat
 
 # COMPARE TO RMLSE FROM MINIMALLY VIABLE PRODUCT
 # The RMLSE for the model with three categorical and three predictor variables has a smaller RMLSE than the model with only one each of numeric and categorical predictors (0.246 vs 0.173).
 ```
 
-```{r}
-# Do actual prediction on all of training data using the reaching for the stars model
-model_2 <- lm(model_2_formula, data = training)
-
-predicted_points2 <- model_2 %>%
-  broom::augment(newdata = test)
-```
 
 ## Create your submission CSV
 
 ```{r}
-test2 <- test %>%
-  mutate(log10_SalePrice_hat = predicted_points2$.fitted,
-         SalePrice = 10^log10_SalePrice_hat)
-
 submission2 <- test2 %>%
   select(Id, SalePrice)
 
@@ -254,7 +274,7 @@ write_csv(submission2, path = "data/submission_reach_for_stars.csv")
 
 ## Comparisons of estimated scores and Kaggle scores
 
-Our score based on our submission's "Root Mean Squared Logarithmic Error" was 0.16273. This is very close to what our RMLSE hat of 0.1676 that we calculated up above.
+Our score based on our submission's "Root Mean Squared Logarithmic Error" was 0.16273. This is very close to what our RMLSE hat of 0.16222 that we calculated up above using 5-fold CV.
 
 
 ***
@@ -266,57 +286,79 @@ Our score based on our submission's "Root Mean Squared Logarithmic Error" was 0.
 # Point of diminishing returns
 
 ## Model fitting
-
+In order to create a "better" model, we began with our six predictors from the reaching for the stars model (model_2) and began manually adding predictors and comparing the resulting RMLSEs. If the added predictor lowered the RMLSE, we added it to the model. The point of diminishing returns model is more complex but should produce a lower RMLSE.
 ```{r}
-# REACHING FOR THE STARS
-
-# Fit model with three arbitrarily chosen numerical and three categorical predictors to pretend training data
+# Prediction on all of training data using the point of diminishing returns model
+# to submit to Kaggle
 model_3_formula <- as.formula("log10_SalePrice ~ log10_GrLivArea + OverallQual + LotArea +
                               HouseStyle + Neighborhood + SaleCondition + Condition1 + OverallCond + YearBuilt +
-                              CentralAir + KitchenQual + Functional + Fireplaces + WoodDeckSF")
-model_3 <- lm(model_3_formula, data = pretend_train)
+                              CentralAir + Fireplaces + WoodDeckSF")
 
-# Make predictions on pretend test data
-predicted_points_3 <- model_3 %>%
-  broom::augment(newdata = pretend_test)
+model_3 <- lm(model_3_formula, data = training)
 
-# Save predictions in pretend_test data frame
-pretend_test <- pretend_test %>% 
-  mutate(log10_SalePrice_hat = predicted_points_3$.fitted,
-        SalePrice_hat = 10^log10_SalePrice_hat)
-
-pretend_test3 <- pretend_test %>% 
-      mutate(residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
-             residual_sq = residual^2) 
-
-# Calculate RMLSE - 0.1734234
-rmlse3 <- pretend_test3 %>% 
-      summarize(
-        MLSE = mean(residual_sq),
-        RMLSE = sqrt(MLSE)
-      ) %>% 
-      pull(RMLSE)
-rmlse3
-```
-
-
-## Estimate of your Kaggle score
-
-```{r}
-MASS::stepAIC(model_3, direction = "both")
-```
-
-
-## Create your submission CSV
-
-```{r}
 predicted_points3 <- model_3 %>%
   broom::augment(newdata = test)
 
 test3 <- test %>%
   mutate(log10_SalePrice_hat = predicted_points3$.fitted,
          SalePrice = 10^log10_SalePrice_hat)
+```
 
+
+## Estimate of your Kaggle score
+
+```{r}
+# Use 5-fold CV to confirm that our RMLSE is similar to the one provided by Kaggle
+RMLSE3 <- rep(0, 5)
+  
+for(j in 1:5) {
+  pretend_training <- training %>% 
+    filter(fold != j)
+  pretend_test <- training %>% 
+    filter(fold == j)
+    
+  # Fit model on pretend training
+  model_3_formula <- as.formula("log10_SalePrice ~ log10_GrLivArea + OverallQual + LotArea +
+                              HouseStyle + Neighborhood + SaleCondition + Condition1 + OverallCond + YearBuilt +
+                              CentralAir + Fireplaces + WoodDeckSF")
+  model_3 <- lm(model_3_formula, data = pretend_training)
+
+  # Make predictions on pretend test data
+  predicted_points_3 <- model_3 %>%
+    broom::augment(newdata = pretend_test)
+
+  # Save predictions in pretend_test data frame
+  pretend_test <- pretend_test %>% 
+    mutate(SalePrice_hat = 10^(predicted_points_3$.fitted))
+
+  pretend_test3 <- pretend_test %>% 
+    mutate(residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
+           residual_sq = residual^2) 
+
+    
+  RMLSE3[j] <- pretend_test3 %>% 
+    mutate(
+      residual = log(SalePrice + 1) - log(SalePrice_hat + 1),
+      residual_sq = residual^2
+    ) %>% 
+    summarize(
+      MLSE = mean(residual_sq),
+      RMLSE3 = sqrt(MLSE)
+    ) %>% 
+    pull(RMLSE3)
+}
+  
+RMLSE3_hat <- mean(RMLSE3)
+
+RMLSE3_hat
+
+# The resulting RMLSE from model three of around 0.1436 is lower than that of the MVP model (RMLSE around 0.24) and the reaching for the stars model (RMLSE around 0.1622).
+```
+
+
+## Create your submission CSV
+
+```{r}
 submission3 <- test3 %>%
   select(Id, SalePrice)
 
@@ -326,9 +368,9 @@ write_csv(submission3, path = "data/submission_diminishing_returns.csv")
 
 ## Screenshot of your Kaggle score
 
-Our score based on our submission's "Root Mean Squared Logarithmic Error" was 0.42918.
-
 ![](third_submission.png){ width=100% }
 
 
 ## Comparisons of estimated scores and Kaggle scores
+
+The score returned by Kaggle (0.0.14086) was very close to what we estimated using 5-fold CV (RMLSE = 0.1436).
