--- a/MP2.Rmd
+++ b/MP2.Rmd
@@ -51,7 +51,7 @@ test <- read_csv("data/test.csv")
 sample_submission <- read_csv("data/sample_submission.csv")
 ```
 
-
+We further analyzed the data by conducting univariate exploratory visualizations of outcome and all predictor variables used throughout the project. We also conducted multivariate exploratory visualizations of the *relationship* between the outcome and predictor variables. Since there are a lot of predictor variables, including a plot for each would make it difficult for a person to read the output file. 
 
 ## Data wrangling
 
@@ -81,7 +81,7 @@ plot1 <- ggplot(training, aes(x = log10_GrLivArea, y = log10_SalePrice)) +
   geom_point() +
   labs(x = "log10(Above ground living area in square feet)", 
        y = "log10(Sale price in USD)",
-       title = "Relationship of temporary outcome variable and numerical predictor variable")
+       title = "SalePrice against GrLivArea")
 ```
 
 ```{r}
@@ -89,11 +89,10 @@ plot2 <- ggplot(training, aes(x = HouseStyle, y = log10_SalePrice)) +
   geom_boxplot(fill =  "darkolivegreen1") +
   labs(x = "Style of Dwelling", 
        y = "log10(Sale price in USD)",
-       title = "Relationship of temporary outcome variable and categorical predictor variable")
+       title = "SalePrice against HouseStyle")
 ```
 
 ```{r}
-require(gridExtra)
 grid.arrange(plot1, plot2, ncol=2)
 ```
 
