Change in paragraph below plots

--- a/MP2.Rmd
+++ b/MP2.Rmd
@@ -88,7 +88,7 @@ require(gridExtra)
 grid.arrange(plot1, plot2, ncol=2)
 ```
 
-For instance, we can determine that there is a relatively strong positive relationship between the outcome variable, SalePrice, and the numerical predictor variable, GrLivArea, from the scatterplot above. Similarly, we can deduce from the boxplots that houses with two and one-half stories (where the 2nd level of the house is finished) have higher sale prices compared to other styles of dwelling. 
+For instance, we can determine that there is a relatively strong positive relationship between the outcome variable, SalePrice, and the numerical predictor variable, GrLivArea, from the scatterplot above.Similarly, we can deduce from the boxplots that the sale prices of houses vary considerably depending on the style of dwelling. Thus, due to the strong correlation between these predictor variables and the outcome variable, we can justify their use in model 3.
 
 ***
 
